--- a/support.html
+++ b/support.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="form1-o" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="form1-o" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -82,7 +82,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="support">
 
-                        <input type="hidden" value="SphIiyDDZyjx/f94irHOdQMBq15rEjArHA6ZdAIsKDh5E3SxTOljUoSql3cy1u0sBtZjfeREFAFSckDd5lpoAEAprlCZ8A1P0gt0YFuRFjKAptMQndEWoDttD/+dfMPk" data-form-email="true">
+                        <input type="hidden" value="0D8yn5wO0cH9/GLZeMhVRljoffpOccx8aqQmO1hI425SP+9E8lqfTlrpNCOUcIJVcLkbo4/seR9M1a66qS43Cko8Kuvcgo26VgLIRK0fWSOF44yiybzvw8wAaESSySyH" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
